--- a/config/prod.env
+++ b/config/prod.env
@@ -1,44 +1,44 @@
 # Django's secret key, change to a 50 character random string if you are running
 # this instance publicly. For an online generator, see e.g. https://djecrety.ir/
-SECRET_KEY=wger-docker-supersecret-key-1234567890!@#$%^&*(-_)
+# SECRET_KEY=
 
 # Signing key used for JWT, use something different than the secret key
-SIGNING_KEY=wger-docker-secret-jwtkey-1234567890!@#$%^&*(-_=+)
+# SIGNING_KEY=
 
 # The server's timezone, for a list of possible names:
 # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 TIME_ZONE=Europe/Berlin
 TZ=Europe/Berlin
 
-#
+# 
 # Consult the deployment section in the readme if you are running this behind a
 # reverse proxy with HTTPS enabled
 
 # CSRF_TRUSTED_ORIGINS=https://my.domain.example.com,https://118.999.881.119
 # X_FORWARDED_PROTO_HEADER_SET=True
 
-#
+# 
 # Static files
 # If you are running the application behind a reverse proxy or changed the port, the
 # links for some images *might* break (specially in the mobile app). Also note that
 # the API response is cached and contains the host, if you change this setting, just run
 # docker compose exec web python3 manage.py warmup-exercise-api-cache --force
-# MEDIA_URL=https://your-domain.example.com/media/
-# STATIC_URL=https://your-domain.example.com/static/
+MEDIA_URL=https://wger.cloux.dev/media/
+STATIC_URL=https://wger.cloux.dev/static/
 
-#
+# 
 # These settings usually don't need changing
-#
+# 
 
-#
+# 
 # Application
-WGER_INSTANCE=https://wger.de # Wger instance from which to sync exercises, images, etc.
+WGER_INSTANCE="https://wger.de # Wger instance from which to sync exercises, images, etc."
 ALLOW_REGISTRATION=True
 ALLOW_GUEST_USERS=True
 ALLOW_UPLOAD_VIDEOS=True
 # Users won't be able to contribute to exercises if their account age is
 # lower than this amount in days.
-MIN_ACCOUNT_AGE_TO_TRUST=21
+MIN_ACCOUNT_AGE_TO_TRUST=0
 # Synchronzing exercises
 # It is recommended to keep the local database synchronized with the wger
 # instance specified in WGER_INSTANCE since there are new added or translations
@@ -47,23 +47,23 @@ MIN_ACCOUNT_AGE_TO_TRUST=21
 # SYNC_EXERCISES_ON_STARTUP=True
 # DOWNLOAD_EXERCISE_IMAGES_ON_STARTUP=True
 # - Sync them in the background with celery. This will setup a job that will run
-#   once a week at a random time (this time is selected once when starting the server)
+# once a week at a random time (this time is selected once when starting the server)
 SYNC_EXERCISES_CELERY=True
 SYNC_EXERCISE_IMAGES_CELERY=True
 SYNC_EXERCISE_VIDEOS_CELERY=True
 # - Manually trigger the process as needed:
-#   docker compose exec web python3 manage.py sync-exercises
-#   docker compose exec web python3 manage.py download-exercise-images
-#   docker compose exec web python3 manage.py download-exercise-videos
+# docker compose exec web python3 manage.py sync-exercises
+# docker compose exec web python3 manage.py download-exercise-images
+# docker compose exec web python3 manage.py download-exercise-videos
 
 # Synchronzing ingredients
 # You can also syncronize the ingredients from a remote wger instance, and have
 # basically the same options as for the ingredients:
 # - Sync them in the background with celery. This will setup a job that will run
-#   once a week at a random time (this time is selected once when starting the server)
+# once a week at a random time (this time is selected once when starting the server)
 SYNC_INGREDIENTS_CELERY=True
 # - Manually trigger the process as needed:
-#   docker compose exec web python3 manage.py sync-ingredients
+# docker compose exec web python3 manage.py sync-ingredients
 
 # This option controls whether to download ingredients and their images from the
 # configured wger instance. When scanning products with the barcode scanner, it is
@@ -75,27 +75,27 @@ DOWNLOAD_INGREDIENTS_FROM=WGER
 # this setup but can be deactivated if you are using the app in some other way
 USE_CELERY=True
 
-#
+# 
 # Celery
 CELERY_BROKER=redis://cache:6379/2
 CELERY_BACKEND=redis://cache:6379/2
-CELERY_FLOWER_PASSWORD=adminadmin
+# CELERY_FLOWER_PASSWORD=adminadmin
 
-#
+# 
 # Database
 DJANGO_DB_ENGINE=django.db.backends.postgresql
 DJANGO_DB_DATABASE=wger
 DJANGO_DB_USER=wger
-DJANGO_DB_PASSWORD=wger
+# DJANGO_DB_PASSWORD=wger
 DJANGO_DB_HOST=db
 DJANGO_DB_PORT=5432
-DJANGO_PERFORM_MIGRATIONS=True # Perform any new database migrations on startup
+DJANGO_PERFORM_MIGRATIONS="True # Perform any new database migrations on startup"
 
-#
+# 
 # Cache
 DJANGO_CACHE_BACKEND=django_redis.cache.RedisCache
 DJANGO_CACHE_LOCATION=redis://cache:6379/1
-DJANGO_CACHE_TIMEOUT=1296000 # in seconds - 60*60*24*15, 15 Days
+DJANGO_CACHE_TIMEOUT="1296000 # in seconds - 60*60*24*15, 15 Days"
 DJANGO_CACHE_CLIENT_CLASS=django_redis.client.DefaultClient
 # DJANGO_CACHE_CLIENT_PASSWORD=abcde... # Only if you changed the redis config
 # DJANGO_CACHE_CLIENT_SSL_KEYFILE=/path/to/ssl_keyfile # Path to an ssl private key.
@@ -103,29 +103,29 @@ DJANGO_CACHE_CLIENT_CLASS=django_redis.client.DefaultClient
 # DJANGO_CACHE_CLIENT_SSL_CERT_REQS=<none | optional | required> # The string value for the verify_mode.
 # DJANGO_CACHE_CLIENT_SSL_CHECK_HOSTNAME=False # If set, match the hostname during the SSL handshake.
 
-#
+# 
 # Brute force login attacks
 # https://django-axes.readthedocs.io/en/latest/index.html
 AXES_ENABLED=True
 AXES_FAILURE_LIMIT=10
-AXES_COOLOFF_TIME=30 # in minutes
+AXES_COOLOFF_TIME="30 # in minutes"
 AXES_HANDLER=axes.handlers.cache.AxesCacheHandler
 AXES_LOCKOUT_PARAMETERS=ip_address
 AXES_IPWARE_PROXY_COUNT=1
 AXES_IPWARE_META_PRECEDENCE_ORDER=HTTP_X_FORWARDED_FOR,REMOTE_ADDR
-#
+# 
 # Others
 DJANGO_DEBUG=False
 WGER_USE_GUNICORN=True
-EXERCISE_CACHE_TTL=18000 # in seconds - 5*60*60, 5 hours
+EXERCISE_CACHE_TTL="18000 # in seconds - 5*60*60, 5 hours"
 SITE_URL=http://localhost
 
-#
+# 
 # JWT auth
-ACCESS_TOKEN_LIFETIME=10 # The lifetime duration of the access token, in minutes
-REFRESH_TOKEN_LIFETIME=24 # The lifetime duration of the refresh token, in hours
+ACCESS_TOKEN_LIFETIME="10 # The lifetime duration of the access token, in minutes"
+REFRESH_TOKEN_LIFETIME="24 # The lifetime duration of the refresh token, in hours"
 
-#
+# 
 # Other possible settings
 
 # Recaptcha keys. You will need to create an account and register your domain
@@ -140,7 +140,7 @@ USE_RECAPTCHA=False
 # being copied correctly, clearing everything might help
 DJANGO_CLEAR_STATIC_FIRST=False
 
-#
+# 
 # Email
 # https://docs.djangoproject.com/en/4.1/topics/email/#smtp-backend
 # ENABLE_EMAIL=False
@@ -159,7 +159,7 @@ FROM_EMAIL='wger Workout Manager <wger@example.com>'
 # Whether to compress css and js files into one (of each)
 # COMPRESS_ENABLED=True
 
-#
+# 
 # Django Rest Framework
 # The number of proxies in front of the application. In the default configuration
 # only nginx is. Change as approtriate if your setup differs. Also note that this
