--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,7 +37,7 @@ services:
       - static:/wger/static:ro
       - media:/wger/media:ro
     ports:
-      - "80:80"
+      - "4080:80"
     healthcheck:
       test: service nginx status
       interval: 10s
@@ -113,14 +113,28 @@ services:
 
 volumes:
   postgres-data:
+    driver: local
+    driver_opts:
+      type: 'none'
+      o: 'bind'
+      device: '/mnt/nas-homelab/wger/postgres-data'
   celery-beat:
   redis-data:
-
   # Heads up, if you remove these volumes and use folders directly you need to chown them
   # to the UID and GID 1000 even if it doesn't exist on your system. Also, they should
   # be readable by everyone.
   media:
+    driver: local
+    driver_opts:
+      type: 'none'
+      o: 'bind'
+      device: '/mnt/nas-homelab/wger/postgres-data'
   static:
+    driver: local
+    driver_opts:
+      type: 'none'
+      o: 'bind'
+      device: '/mnt/nas-homelab/wger/postgres-data'
 
 networks:
   default:
